syntax = "proto3";

package guide;

service Guide {
    
    rpc GetFeature(Point) returns (Feature) {}
    
    rpc ListFeatures(Rectangle) returns (stream Feature) {}
        
    rpc RecordRoute(stream Point) returns (RouteSummary) {}
        
    rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

// Point are lat-long pairs in E7 representation.
message Point {
    int32 Latitude = 1;
    int32 longitude = 2;
}

// The lat-long of a rectangle. lo and hi are diagonally opposite points.
message Rectangle {
    Point lo = 1;
    Point hi = 2;
}

// A feature names something at a point.
message Feature {
    string name = 1;
    Point location = 2;
}

// A RouteNote is a message sent while at a given point.
message RouteNote {
    Point location = 1;
    Point message = 2;
}

// A RouteSummary is received in response to a RecordRoute rpc.
//
// It contains the number of individual points received, the number of
// detected features, and the total distance covered as the cumulative sum of
// the distance between each point.
message RouteSummary {
    int32 point_count = 1;
    int32 feature_count = 2;
    int32 distance = 3;
    int32 elapsed_time = 4;
}

